<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskFragment"
    android:orientation="vertical"
    android:background="@color/back_primary"
    android:paddingHorizontal="20dp"
    android:paddingTop="25dp"
    >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_25"
            android:id="@+id/cancel_image_button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="СОХРАНИТЬ"
            android:textColor="@color/blue"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fadingEdge="none"
            android:id="@+id/ok_button"
            />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cancel_image_button"
        android:layout_marginTop="15dp"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Что надо сделать..."
            android:background="@drawable/round_edge"
            android:paddingTop="10dp"
            android:paddingBottom="75dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="top"
            android:layout_marginBottom="25dp"
            android:id="@+id/task_edit_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Важность"
            android:textColor="@color/primary"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/task_edit_text"
            android:id="@+id/priority_text_view"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/priority"
            android:layout_below="@id/priority_text_view"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Сделать до"
            android:textColor="@color/primary"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/spinner"
            android:layout_marginTop="25dp"
            android:id="@+id/done_before"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/done_before"
            android:id="@+id/data_done"

            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_below="@id/spinner"
            android:layout_marginTop="25dp"
            android:id="@+id/switch_view"
            android:trackTint="@color/blue"
            />


    </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calendar_frame"
        />

</RelativeLayout>